# Prescribed-topological-simplification

./: .gitignore  CMakeLists.txt  README.md  cubical_mode.cpp  cubical_mode.h  main.cpp  marching_cubes.cpp  marching_cubes.h  mrc_reader.h  msh_reader.h  tet_mode.cpp  tet_mode.h
TopoMinCut/: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  TopoMinCut.vcxproj  TopoMinCut.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters
TopoMinCut/TopoMinCut.dir/Release/TopoMinCut.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
TopoMinCut/include/: boundary_matrix.hpp  graph_flow.hpp  iset.hpp  persistence.hpp  tags.hpp  thinning.hpp  topomincut_runner.hpp
TopoMinCut/phat/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  Phat.sln  benchmark.vcxproj  benchmark.vcxproj.filters  convert.vcxproj  convert.vcxproj.filters  info.vcxproj  info.vcxproj.filters  phat.vcxproj  phat.vcxproj.filters  phat2.vcxproj  phat2.vcxproj.filters  phat_example.vcxproj  phat_example.vcxproj.filters  self_test.vcxproj  self_test.vcxproj.filters
TopoMinCut/phat/benchmark.dir/Release/: benchmark.exe.recipe
TopoMinCut/phat/cbuild/: benchmark  convert  info  phat  phat2  self_test  simple_example
TopoMinCut/phat/convert.dir/Release/: convert.exe.recipe
TopoMinCut/phat/include/phat/: boundary_matrix.h
TopoMinCut/phat/info.dir/Release/: info.exe.recipe
TopoMinCut/phat/phat2.dir/Release/: phat2.exe.recipe
TopoMinCut/phat/phat_example.dir/Release/: phat_example.exe.recipe
TopoMinCut/phat/python/: test.py
TopoMinCut/phat/self_test.dir/Release/: self_test.exe.recipe
TopoMinCut/phat/src/: benchmark.cpp  convert.cpp  phat.cpp  phat2.cpp  self_test.cpp  simple_example.cpp
TopoMinCut/src/: boundary_matrix.cpp  graph_flow.cpp  iset.cpp  persistence.cpp  tags.cpp  thinning.cpp  topo_min_cut_cli.cpp  topomincut_runner.cpp
TopoMinCut/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
(+59 files in other folders)
